<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">


    <Space
        android:id="@+id/upper_space"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/currency_converter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upper_space"  />


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/amount"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/amount_edit_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:autofillHints="Type smth"
            android:inputType = "numberDecimal"
            android:textSize="18sp"
            android:hint="@string/hint" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/from"
                android:textStyle="bold"
                android:layout_gravity="center" />
            <Spinner
                android:id="@+id/currency_spinner_from"
                android:layout_width="105dp"
                android:layout_height="48dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/to"
                android:textStyle="bold"
                android:layout_gravity="center" />
            <Spinner
                android:id="@+id/currency_spinner_to"
                android:layout_width="105dp"
                android:layout_height="48dp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp"/>

        <Button
            android:id="@+id/convert_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:text="@string/convert" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/api"
        android:lines="2"
        android:minLines="2"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_space"  />
    <Space
        android:id="@+id/bottom_space"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>